--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -1,7 +1,9 @@
-
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/emsdb?createdatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/emsdb?createDatabaseIfNotExist=true
     username: root
     password: 1qaz2wsx@
-    driver-class-name: com.mysql.jdbc.Drivers
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
