--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -6,4 +6,16 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
+    show-sql: true
+    
+
+security:
+  oauth2:
+    resource:
+      token-info-uri: http://localhost:8191/oauth/check_token
+    client:
+      client-id: web
+      client-secret: web
+      
+      
